testdata/baselines/reference/submodule/conformance/emitArrowFunctionWhenUsingArguments11_ES6(alwaysstrict=false).errors.txt
error TS5108: Option 'alwaysStrict=false' has been removed. Please remove it from your configuration.
emitArrowFunctionWhenUsingArguments11_ES6.ts(1,12): error TS1100: Invalid use of 'arguments' in strict mode.


!!! error TS5108: Option 'alwaysStrict=false' has been removed. Please remove it from your configuration.
==== emitArrowFunctionWhenUsingArguments11_ES6.ts (1 errors) ====
    function f(arguments) {
               ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
        var _arguments = 10;
        var a = () => () => arguments;
    }